# matrix

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: buffer.h  matrix.h
mode/: mode.h
tests/e2e_test/: CMakeLists.txt  test.sh
tests/e2e_test/data/: test1.ans  test3.ans
tests/test1/: size100.ans
tests/test2/: size150.ans
tests/test3/: size150.ans
tests/test4/: size4.ans
tests/unit_test/: CMakeLists.txt  matrix_test.cpp
unit_tests/: CMakeLists.txt  funcs.h  tests.cpp
